spacing fixed - featured collection

--- a/assets/featured-collection.css
+++ b/assets/featured-collection.css
@@ -4,8 +4,8 @@
     justify-content: center;
     align-items: center;
     height: max-content;
-    padding: 50px 0px;
-    user-select: none;
+    padding: 25px 0px;
+    user-select: none;  
     background-color: #0d3135;
     
 }
